--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="https://example.org/">
+<link rel="canonical" href="https://dddaniel1.github.io/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.54405a410796490bc874ab6181fac9b675753cc2b91375d8f882566459eca428.css" integrity="sha256-VEBaQQeWSQvIdKthgfrJtnV1PMK5E3XY&#43;IJWZFnspCg=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://example.org/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://example.org/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://example.org/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://example.org/apple-touch-icon.png">
-<link rel="mask-icon" href="https://example.org/safari-pinned-tab.svg">
+<link rel="icon" href="https://dddaniel1.github.io/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://dddaniel1.github.io/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://dddaniel1.github.io/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://dddaniel1.github.io/apple-touch-icon.png">
+<link rel="mask-icon" href="https://dddaniel1.github.io/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="https://example.org/index.xml">
-<link rel="alternate" hreflang="en" href="https://example.org/">
+<link rel="alternate" type="application/rss+xml" href="https://dddaniel1.github.io/index.xml">
+<link rel="alternate" hreflang="en" href="https://dddaniel1.github.io/">
 <noscript>
     <style>
         #theme-toggle,
@@ -60,7 +60,7 @@
 </noscript><meta property="og:title" content="光影障目" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://example.org/" />
+<meta property="og:url" content="https://dddaniel1.github.io/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="光影障目"/>
@@ -71,9 +71,9 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "光影障目",
-  "url": "https://example.org/",
+  "url": "https://dddaniel1.github.io/",
   "description": "",
-  "thumbnailUrl": "https://example.org/favicon.ico",
+  "thumbnailUrl": "https://dddaniel1.github.io/favicon.ico",
   "sameAs": [
       
   ]
@@ -96,7 +96,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://example.org/" accesskey="h" title="光影障目 (Alt + H)">光影障目</a>
+            <a href="https://dddaniel1.github.io/" accesskey="h" title="光影障目 (Alt + H)">光影障目</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -128,7 +128,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2024 <a href="https://example.org/">光影障目</a></span> · 
+        <span>&copy; 2024 <a href="https://dddaniel1.github.io/">光影障目</a></span> · 
 
     <span>
         Powered by
